# rrJava

./: .gitignore  README.md  gradle.properties  settings.gradle
docs/: Minecraft.md
rrClojure/: build.gradle
rrClojure/src/main/clojure/rrclojure/: Main.clj
rrGroovy/: README.md  build.gradle
rrGroovy/src/main/groovy/rrgroovy/: Main.groovy  package-info.java
rrGroovy/src/test/groovy/rrgroovy/: ControlFlow.groovy  Types.groovy  UnitTests.groovy
rrJava/: README.md  build.gradle
rrJava/src/main/java/rrjava/: Main.java  package-info.java
rrJava/src/main/java/rrjni/: JNI.java
rrJava/src/main/jni/: CMakeLists.txt  impl.cpp  impl.cxx  jniaux.cxx  rrjni_JNI.cmd
rrJava/src/main/jni/rrjni/: CMakeLists.txt  jniaux.hxx  rrjni_JNI.cmd
rrJava/src/test/java/rrjava/: ControlFlow.java  Import.java  Types.java  UnitTests.java
rrJava/src/test/java/rrjni/: JNITest.java
rrJava/src/test/java/rrswig/: SwigTest.java
rrKotlin/: README.md  build.gradle
rrKotlin/src/main/kotlin/rrkotlin/: Main.kt  package-info.java
rrKotlin/src/test/kotlin/rrkotlin/: Types.kt  UnitTests.kt
rrMinecraft/: README.md
rrScala/: README.md  build.gradle
rrScala/src/main/scala/rrscala/: Main.scala  package-info.java
rrScala/src/test/scala/rrscala/: Types.scala  UnitTests.scala
